# Predicting_Returns

./: README.md  app.py  config.py  pyproject.toml  requirements.txt
data/: __init__.py  fetcher.py  preprocessing.py
evaluation/: __init__.py  backtesting.py  metrics.py
models/: __init__.py  base.py  garch.py  ml_models.py  stochastic_vol.py
notebooks/: 01_exploratory_analysis.ipynb  02_model_comparison.ipynb
tests/: __init__.py  test_models.py
