[tool.poetry]
name = "predicting-returns"
version = "0.1.0"
description = "A Python framework for comparing volatility/variance forecasting models on stock data"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [
    { include = "data" },
    { include = "models" },
    { include = "evaluation" },
]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
yfinance = ">=0.2.0"
pandas = ">=2.0.0"
numpy = ">=1.24.0"
scipy = ">=1.10.0"
arch = ">=6.0.0"
scikit-learn = ">=1.3.0"
xgboost = ">=2.0.0"
matplotlib = ">=3.7.0"
seaborn = ">=0.12.0"
statsmodels = ">=0.14.0"
tqdm = ">=4.65.0"
streamlit = ">=1.30.0"
plotly = ">=5.18.0"

[tool.poetry.group.ml.dependencies]
tensorflow = { version = ">=2.15.0", optional = true }

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0.0"
jupyter = ">=1.0.0"
ipykernel = ">=6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v"
